Chill out google

--- a/Project-M/packages/apps/Settings/res/values/strings.xml
+++ b/Project-M/packages/apps/Settings/res/values/strings.xml
@@ -3832,7 +3832,7 @@
     <!-- Data synchronization settings screen, checkbox setting option name -->
     <string name="sync_contacts">Contacts</string>
     <!-- Message introducing the user to Google Sync. -->
-    <string name="sync_plug"><font fgcolor="#ffffffff">Welcome to Google sync!</font>
+    <string name="sync_plug"><font fgcolor="#ffffffff">Welcome to Google sync</font>
     \nA Google approach to syncing data to allow access to your contacts, appointments, and more from wherever you are.
     </string>
 
