--- a/Project-M/packages/apps/Torch/res/values/strings.xml
+++ b/Project-M/packages/apps/Torch/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Torch</string>
     <string name="about_title">About</string>
-    <string name="about_close">Close</string>
+    <string name="about_close">Exit</string>
 
     <string name="description">This program manipulates the camera LED.\n</string>
     <string name="warning">Warning: Leaving the LED on for a long time might overheat it.\n\nFull brightness &#8220;always on&#8221; has been tested running for &#189; hr, but there is the risk this could damage the LED.\n</string>
@@ -18,7 +18,7 @@
     <string name="label_strobe">RAVE</string>
     <string name="label_frequency">Frequency: (slide to change)</string>
 
-    <string name="widget_options">General options</string>
+    <string name="widget_options">Options</string>
     <string name="setting_widget_bright">Bright widget</string>
     <string name="setting_widget_strobe">Strobe flash</string>
     <string name="setting_frequency_title">Strobe frequency</string>
